# mind-inbox

./: .gitignore  .lintstagedrc.cjs  .markdownlint.json  .prettierignore  .prettierrc.json  CLAUDE.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: test.md
.github/agents/: infra-dependency-analyst.agent.md
.github/workflows/: test.yml
apps/bff/: .funcignore  eslint.config.mjs  local.settings.json.example  package-lock.json  package.json  requirements.txt  tsconfig.json
apps/frontend/: .env.local.example  .env.production  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/services/ai-agent/: Dockerfile  README.md  pyproject.toml
apps/services/ai-agent/app/: config.py  kernel.py  main.py  organizer.py  planner.py  rag.py  repositories.py  schemas.py  tools.py  workflow.py
apps/services/ai-agent/tests/: conftest.py  test_l2_endpoints.py  test_organizer.py  test_planner.py  test_repositories.py
backend/: .gitignore  README.md  function_app.py
cicd/iac/: README.md  main-bootstrap.bicep  main-bootstrap.parameters.json  main-config.bicep
cicd/modules/: bootstrap-core.bicep  static-site-auth.bicep
docs/: concept_deck.md
docs/adr/: README.md  template.md
docs/api/: README.md
docs/design/: basic_design.md  deploy_plan.md  implementation_plan.md
docs/documentation/: strategy.md
docs/frontend/: ui_design.md
docs/runbooks/: README.md  template.md
docs/testing/: strategy.md
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
(+93 files in other folders)
